// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create table 1`] = `
Object {
  "Resources": Object {
    "GlueDatabase": Object {
      "Properties": Object {
        "CatalogId": Object {
          "Ref": "AWS::AccountId",
        },
        "DatabaseInput": Object {
          "Description": "An AWS Glue database generated by AWS Solutions Construct",
        },
      },
      "Type": "AWS::Glue::Database",
    },
    "GlueTable": Object {
      "Properties": Object {
        "CatalogId": Object {
          "Ref": "AWS::AccountId",
        },
        "DatabaseName": Object {
          "Ref": "GlueDatabase",
        },
        "TableInput": Object {
          "Parameters": Object {
            "classification": "json",
          },
          "StorageDescriptor": Object {
            "Columns": Array [
              Object {
                "Comment": "Identifier for the record",
                "Name": "id",
                "Type": "int",
              },
              Object {
                "Comment": "The name of the record",
                "Name": "name",
                "Type": "string",
              },
              Object {
                "Comment": "The type of the record",
                "Name": "type",
                "Type": "string",
              },
              Object {
                "Comment": "Some value associated with the record",
                "Name": "numericvalue",
                "Type": "int",
              },
            ],
            "Compressed": false,
            "InputFormat": "org.apache.hadoop.mapred.TextInputFormat",
            "Location": "testStream",
            "NumberOfBuckets": -1,
            "OutputFormat": "org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat",
            "Parameters": Object {
              "endpointUrl": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "https://kinesis.",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ".amazonaws.com",
                  ],
                ],
              },
              "streamName": "testStream",
              "typeOfData": "kinesis",
            },
            "SerdeInfo": Object {
              "Parameters": Object {
                "paths": "id,name,type,numericvalue",
              },
              "SerializationLibrary": "org.openx.data.jsonserde.JsonSerDe",
            },
          },
          "TableType": "EXTERNAL_TABLE",
        },
      },
      "Type": "AWS::Glue::Table",
    },
  },
}
`;

exports[`create default CfnTable with default props 1`] = `
Object {
  "Resources": Object {
    "GlueTable": Object {
      "Properties": Object {
        "CatalogId": "fakecatalogfortest",
        "DatabaseName": "fakedatabase",
        "TableInput": Object {
          "Parameters": Object {
            "classification": "json",
          },
          "StorageDescriptor": Object {
            "Parameters": Object {
              "endpointUrl": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "https://kinesis.",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ".amazonaws.com",
                  ],
                ],
              },
              "streamName": "testStream",
              "typeOfData": "kinesis",
            },
          },
        },
      },
      "Type": "AWS::Glue::Table",
    },
  },
}
`;
